--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,7 @@
-<div class="hero-unit" ng-controller="MainCtrl">
+<div class="container-fluid" ng-controller="MainCtrl">
     <h1>Points from the circle</h1>
-    <p class="lead">random points from a circle of radius: </p>
+    <p class="lead">random points within a circle: </p>
+
     <div class="row-fluid">
         <div class='content col-sm-6' id='d3content'>
             <!-- /the chart goes here -->
@@ -8,13 +9,19 @@
 
 
         <div class="col-sm-6">
-            <form action="">
-                <div class="form-group ">
+            <form name="myForm" action="">
+                <div class="form-group col-sm-6">
                     <label for="radius">radius</label>
-                    <input class="form-control" type="number" ng-model="radius" id="radius" focus/>
+                    <input class="form-control" type="number" ng-model="radius" id="radius" min="1" focus required>
                     <label for="maxpoints">points</label>
-                    <input type="number" class="form-control" ng-model="maxpoints" id="maxpoints"/>
-                    <button type="button" class="btn btn-default" ng-click="refresh()">refresh</button>
+                    <input type="number" class="form-control" ng-model="maxpoints" id="maxpoints" max="5000"/>
+                </div>
+                <div class="form-group col-sm-6">
+                    <label for="x0">origin x</label>
+                    <input type="number" class="form-control" ng-model="x0" id="x0"/>
+                    <label for="y0">origin y</label>
+                    <input type="number" class="form-control" ng-model="y0" id="y0"/>
+                    <button type="button" class="btn btn-default" ng-click="refresh()" ng-disabled="!myForm.$valid">refresh</button>
                 </div>
             </form>
         </div>
@@ -23,14 +30,16 @@
     <div class="row-fluid">
         <div class="col-sm-6">
             <p class="lead">Generate one or more</p>
-            <p> Random points inside a circle of radius r around 0,0:
+            <p> Random points inside a circle of radius {{radius}} around ({{x0}},{{y0}}):
                 the problem is easily solved thinking in radial coordinates:
                 we want a point with a random distance from the center, "r", and a random angle "t".
                 Since the surface of a circle goes with the square power of the radius,
                 and we want uniform coverage of such surface (i.e. uniformly distributed points)
                 the random radius values have to be sampled with square root weight.
             </p>
-            <p><a href="pycircle.py">download simple script in python</a></p>
+            <!--FIXME: make this a real link-->
+
+            <p><a href="pycircle.py">get a simple script in python</a></p>
 
         </div>
 
@@ -39,5 +48,8 @@
   <ul ng-repeat="point in points.coords"><li>{{point.x}},{{point.y}}</li></ul>
   </pre>
         </div>
+    </div>
+    <div class="row-fluid footer">
+        <p><a href="mailto:cadedduan@gmail.com">Andrea Cadeddu</a> 2013, based on <a href="http://rubyquiz.strd6.com/quizzes/234-random-points-within-a-circle">rubyquiz 234</a></p>
     </div>
 </div>
