updated file link

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -39,7 +39,7 @@
             </p>
             <!--FIXME: make this a real link-->
 
-            <p><a href="pycircle.py">get a simple script in python</a></p>
+            <p><a href="public/pycircle.py">get a simple script in python</a></p>
 
         </div>
 
